Version ?.?.? (not yet released)
--------------------------------

 New features:
 * Allow arbitrary SVN directories to be created when a project is created.

 Bugs fixed:

 Improvements and output changes:

 Miscellaneous:


Version 2.1.0 (19 February 2008)
--------------------------------

 New features:
 * Allow conversion of a CVS repository to git (experimental).
   - Support mapping from cvs author names to git "Author <email>" form.
 * Enhance symbol transform capabilities:
   - Add SymbolMapper, for transforming specific symbols in specific files.
   - Allow SymbolTransforms to cause a symbol to be discarded.
 * Enhance symbol strategy capabilities:
   - Write each CVS branch/tag to be written to an arbitrary SVN path.
   - Choose which trunk/branch should serve as the parent of each branch/tag.
   - --symbol-hints: manually specify how symbols should be converted.
   - Make symbol strategy rules project-specific.
 * --write-symbol-info: output info about CVS symbols.
 * Add option ctx.decode_apple_single for handling AppleSingle-encoded files.
 * Add a new, restartable pass that converts author and log_msg to unicode.
 * Allow properties to be left unset via auto-props using a leading '!'.

 Bugs fixed:
 * Fix issue #80: Empty CVS,v file not accepted.
 * Fix issue #108: Create project TTB directories "just-in-time".
 * Fix issue #112: Random test failures with Python 2.5.
 * Fix issue #115: crash - Bad file descriptor.
 * Fix the translation of line-end characters for eol-styles CR and CRLF.

 Improvements and output changes:
 * Create trunk/tags/branches directories for project when project is created.
 * Improved conversion speed significantly, especially for large repositories.
 * Ignore (with a warning) symbols defined to malformed revision numbers.
 * Tolerate multiple definitions of a symbol to the same revision number.
 * Handle RCS files that superfluously set the default branch to trunk.