@@ -3,6 +3,7 @@ Version ?.?.? (not yet released)
 
  New features:
  * Allow arbitrary SVN directories to be created when a project is created.
+ * Allow vendor branches to be excluded, grafting child symbols to trunk.
 
  Bugs fixed:
 
